Closed Bug 355212 Opened 17 years ago Closed 17 years ago

Manually-marked junk messages are not moved to the junk folder with global inbox

Categories

(SeaMonkey :: MailNews: Account Configuration, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ajschult784, Assigned: neil)

References

Details

(Keywords: fixed-seamonkey1.1b, fixed1.8.1)

Attachments

(1 file)

With current CVS build, using a global inbox (POP account) set up with moving to a junk folder enabled and the pref set to move manually-marked junk messages to the junk folder, marking junk in Local Folders does not move the message to the junk folder.

The reason for this is that the Local Folder's spam settings are used instead of the POP server's.  Since there is no UI to set junk prefs on Local Folders, enabling this feature is impossible without editting the prefs manually (or perhaps migrating a non-global inbox to global).

This is probably the same cause as TBird bug 279018 and bug 339275.
> Since there is no UI to set junk prefs on Local Folders,

This bug is a regression in that before bug 257990 Local Folders did have junk mail UI.
Blocks: 257990
Attached patch Proposed patchSplinter Review
Plus Thunderbird approval, please.
Assignee: mail → neil
Status: NEW → ASSIGNED
Attachment #241042 - Flags: superreview?(mscott)
Attachment #241042 - Flags: review?(mscott)
I suspect there are quite a few bugs that are actually the same... unfortunately none of the bugs I found had been analyzed to the point where I could decide if they were the same (caused by global inbox) and this seemed important enough to just file it separately.
> +    // junk settings apply for all server types except for news
> +    nsXPIDLCString serverType;
> +    server->GetType(getter_Copies(serverType));
> +    if (!serverType.LowerCaseEqualsLiteral("nntp"))
> +      aNodeArray->AppendElement(kNC_PageTitleJunk);

Also unneeded for RSS -- I assume that's not covered by the check for "nntp"?
Oddly enough no panes are shown with RSS in my build, although I have to admit that this is based on an early port that IanN did of Thunderbird's RSS support that doesn't work properly any more :-(
Comment on attachment 241042 [details] [diff] [review]
Proposed patch

is this a bug on the branch too? I would think so.
Attachment #241042 - Flags: superreview?(mscott)
Attachment #241042 - Flags: superreview+
Attachment #241042 - Flags: review?(mscott)
Attachment #241042 - Flags: review+
Comment on attachment 241042 [details] [diff] [review]
Proposed patch

a=mscott for thunderbird and seamonkey after talking to Neil.

This has no effect on Firefox but I don't have access to approve the 1.8.1 flag.
Attachment #241042 - Flags: approval1.8.1?
Fix checked in (sorry for not getting to this before).
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: blocking-seamonkey1.1b?
Comment on attachment 241042 [details] [diff] [review]
Proposed patch

a=beltzner on behalf of drivers (NPOTB)
Attachment #241042 - Flags: approval1.8.1? → approval1.8.1+
Fix checked in to the branch.
Flags: blocking-seamonkey1.1b?
You need to log in before you can comment on or make changes to this bug.