Bug 355212 Global Inbox needs spam settings r+sr=mscott